--- a/pom.xml
+++ b/pom.xml
@@ -15,15 +15,15 @@
     <description>cicdDemo</description>
     <properties>
         <java.version>17</java.version>
-        <!-- JaCoCo Properties -->
         <jacoco.version>0.8.8</jacoco.version>
+        <sonar.organization>seanmbowen</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
