--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,8 @@ on:
       - main
 jobs:
   #Test's job
-  tests:
-    name: Unit tests
+  build-analyze:
+    name: Build & Analyze
     #Run on Ubuntu using the latest version
     runs-on: ubuntu-latest
     #Job's steps
@@ -38,9 +38,9 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      #Run Tests
-      - name: Run Tests
-        run: mvn -B test
+#      #Run Tests
+#      - name: Run Tests
+#        run: mvn -B test
       #Analyze project with sonarQube
       - name: Build and analyze
         env:
