--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,9 +38,9 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-#      #Run Tests
-#      - name: Run Tests
-#        run: mvn -B test
+      #Run Tests
+      - name: Run Tests
+        run: mvn -B test
       #Analyze project with sonarQube
       - name: Build and analyze
         env:
