--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       #Set up JDK 17
       - name: Set up JDK
         uses: actions/setup-java@v3
