--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,3 +54,15 @@ jobs:
           name: artifact
          #From this path
           path: target/cicdDemo-0.0.1-SNAPSHOT.jar
+            #Deploy the artifact (JAR) into AWS Beanstalk
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v20
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          use_existing_version_if_available: false
+          application_name: spring-boot-deploy
+          environment_name: Springbootdeploy-env
+          version_label: ${{github.SHA}}
+          region: ca-central-1
+          deployment_package: target/cicdDemo-0.0.1-SNAPSHOT.jar
