--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,8 @@ jobs:
          #From this path
           path: target/cicdDemo-0.0.1-SNAPSHOT.jar
             #Deploy the artifact (JAR) into AWS Beanstalk
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v20
         with:
@@ -65,4 +67,4 @@ jobs:
           environment_name: Springbootdeploy-env
           version_label: ${{github.SHA}}
           region: ca-central-1
-          deployment_package: target/cicdDemo-0.0.1-SNAPSHOT.jar
+          deployment_package: deploy.zip
