fix(config): - Fixed issue with AWS Beanstalk deploy.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,9 +62,9 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          use_existing_version_if_available: false
+          use_existing_version_if_available: true
           application_name: spring-boot-deploy
-          environment_name: Springbootdeploy-env
+          environment_name: Springbootdeploy-env-1
           version_label: ${{github.SHA}}
           region: ca-central-1
           deployment_package: deploy.zip
