--- a/.gitignore
+++ b/.gitignore
@@ -128,19 +128,19 @@ Desktop.ini
 ######################
 # Gradle Wrapper
 ######################
-!gradle/wrapper/gradle-wrapper.jar
+gradle/wrapper/gradle-wrapper.jar
 
 ######################
 # Maven Wrapper
 ######################
-!.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/maven-wrapper.jar
 
 ######################
 # ESLint
 ######################
 .eslintcache
 /HELP.md
-/.mvn/
-mvnw*
-/HELP.md
+
 /mvnw
+/mvnw.cmd
+/.mvn/
