feat(config): - Added step to perform release.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,3 +69,9 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+      - name: Create a Release
+        uses: elgohr/Github-Release-Action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+        with:
+          title: Spring Demo Release
