--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,33 +8,25 @@ on:
     branches:
       - main
 jobs:
-  #Test's job
   build-analyze:
     name: Build & Analyze
-    #Run on Ubuntu using the latest version
     runs-on: ubuntu-latest
-    #Job's steps
     steps:
-      #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      #Set up JDK 11
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
-      #Setup Sonar Cache
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-      #Set up Maven cache
       - name: Cache Maven packages
-        #This action allows caching dependencies and build outputs to improve workflow execution time.
         uses: actions/cache@v3
         with:
           path: ~/.m2
@@ -42,19 +34,30 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build and analyze
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=seanmbowen_cicdDemo
-      #Build the application using Maven
       - name: Upload JAR
-        #This uploads artifacts from your workflow allowing you to share data between jobs and store data once a workflow is complete.
         uses: actions/upload-artifact@v3
         with:
-          #Set artifact name
           name: artifact
-          #From this path
           path: target/cicdDemo-0.0.1-SNAPSHOT.jar
+      - name: Upload Coverage Reports
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+      - name: Prepare Release
+        uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Development Build"
+          files: |
+            LICENSE.txt
+            target/cicdDemo-0.0.1-SNAPSHOT.jar
       - name: Deploy to EB
+        if: github.event_name == 'push' && github.ref == "refs/heads/main"
         uses: einaregilsson/beanstalk-deploy@v20
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -65,17 +68,3 @@ jobs:
           version_label: ${{github.SHA}}
           region: ca-central-1
           deployment_package: target/cicdDemo-0.0.1-SNAPSHOT.jar
-      - name: Upload Coverage Reports
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-      - name: Prepare Release
-        uses: "marvinpinto/action-automatic-releases@latest"
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: true
-          prerelease: true
-          title: "Development Build"
-          files: |
-            LICENSE.txt
-            target/cicdDemo-0.0.1-SNAPSHOT.jar
