--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,6 @@
-#Workflow name
 name: CI/CD Pipeline
 on:
-  #Manually trigger workflow runs
   workflow_dispatch:
-  #Trigger the workflow on push from the main branch
   push:
     branches:
       - main
@@ -37,6 +34,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=seanmbowen_cicdDemo
+      - name: Run check style
+        uses: nikitasavinov/checkstyle-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          checkstyle_config: sun_checks.xml
+          reporter: 'github-checkstyle'
       - name: Upload JAR
         uses: actions/upload-artifact@v3
         with:
@@ -47,6 +50,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
       - name: Prepare Release
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
@@ -54,7 +58,6 @@ jobs:
           prerelease: true
           title: "Development Build"
           files: |
-            LICENSE.txt
             target/cicdDemo-0.0.1-SNAPSHOT.jar
       - name: Deploy to EB
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
