--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           checkstyle_config: sun_checks.xml
-          reporter: 'github-checkstyle'
+          reporter: 'github-pr-check'
       - name: Upload JAR
         uses: actions/upload-artifact@v3
         with:
